# agentic-nlp-pipeline

./: .gitignore  Instructions to run the code.txt  README.md  pyproject.toml  requirements.txt
agentic_nlp_pipeline/: README.md  __init__.py
agentic_nlp_pipeline/agentic/: agent.py  templates.py
agentic_nlp_pipeline/data/: tree_validation.py
agentic_nlp_pipeline/evaluation/: __init__.py  metrics.py  projectivity.py
agentic_nlp_pipeline/experiment/: __init__.py  experiment.py  utils.py
agentic_nlp_pipeline/models/: __init__.py  api.py  base.py  llama_cpp.py  local.py
agentic_nlp_pipeline/prompting/: __init__.py  agent.py  harnesses.py  parsing.py  templates.py  tools.py
agentic_nlp_pipeline/tools/: __init__.py  base.py  bow_retrieval.py  defer.py  knn_retrieval.py  morphology_lookup.py  retrieval.py  retrieval2.py  tree_validation.py  utils.py
agentic_nlp_pipeline/validation/: __init__.py  tree_validation.py
data/processed/: parse.csv
data/vietnamese/: README.md
docs/: stanza_data_objects_notes.md  vietnamese_baseline_and_morphology_notes.md  vietnamese_data_audit.md
presentation/: Figures.xlsx  Presentation.pptx
report/: LLM-Engineering.pptx  Model with Tools Output Englishdocx.docx  Report.typ  refs.bib
report/chapters/: conclusion.typ  contribution_statement.typ  experiment.typ  introduction.typ  results.typ  (+2 more)
scripts/: Colab.ipynb  data_analysis.py  experiment_with_tools.py  experiment_without_tools.py  fetch_corpus_data.py  inspect_vietnamese_vtb.py  nan_data.py  produce_datasets.py  run_agent.py  trial_marathi.py
tests/: test_utils.py
(+252 files in other folders)
